--- a/pages/concepts.xhtml
+++ b/pages/concepts.xhtml
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+    <link rel="stylesheet" href="/dpoi/css/theme.css"/>
     <title>Title</title>
 </head>
 <body>
