--- a/pages/concepts.html
+++ b/pages/concepts.html
@@ -2,14 +2,16 @@
 <html>
 <head>
     <title>Conceptos</title>
+    <link rel="stylesheet" href="/dpoi/css/concepts-layout-with-sidebar.css"/>
+    <link rel="stylesheet" href="/dpoi/css/concepts-print.css" media="print"/>
 </head>
 <body>
-<section id="header">
-    <meta charset="UTF-8"/>
-    <h1>Conceptos</h1>
-</section>
-<section id="body-container">
-    <section id="index" class="nav">
+<div class="container">
+    <header class="with-border with-padding">
+        <meta charset="UTF-8"/>
+        <h1>Conceptos</h1>
+    </header>
+    <aside class="index with-border with-padding">
         <h2>Indice</h2>
         <ul>
             <li><a href="#about-br">Uso de br</a></li>
@@ -31,45 +33,47 @@
                 </ul>
             </li>
         </ul>
-    </section>
-    <section id="about-br">
-        <h2>Sobre el &lt;br/&gt;</h2>
-        <p>
-            Por ejemplo en una canción si camina el poner el &lt;br/&gt; porque es fija la longitud de la linea debiendo
-            respetar los renglones, pero en los casos donde hay mucho que decir, como es este caso, sin el br se deja
-            que el browser maneje los saltos de renglón. Dependiendo del size de la ventana del browser, lo mejor y
-            recomendado es no forzar el retorno de carro. ¿¡Capito!?
-        </p>
+    </aside>
+    <section class="main-content with-padding">
+        <section id="about-br">
+            <h2>Sobre el &lt;br/&gt;</h2>
+            <p>
+                Por ejemplo en una canción si camina el poner el &lt;br/&gt; porque es fija la longitud de la linea debiendo
+                respetar los renglones, pero en los casos donde hay mucho que decir, como es este caso, sin el br se deja
+                que el browser maneje los saltos de renglón. Dependiendo del size de la ventana del browser, lo mejor y
+                recomendado es no forzar el retorno de carro. ¿¡Capito!?
+            </p>
 
-        <h3>Ejemplo con una canción</h3>
-        <p>
-            Hubo un tiempo que fui hermoso <br/>
-            y fui libre de verdad <br/>
-            guardaba todos mis sueños <br/>
-            en castillos de cristal. <br/><br/>
-            Te encontrare una mañana, <br/>
-            dentro de mi habitación <br/>
-            y prepararas la cama para dos.
-        </p>
+            <h3>Ejemplo con una canción</h3>
+            <p>
+                Hubo un tiempo que fui hermoso <br/>
+                y fui libre de verdad <br/>
+                guardaba todos mis sueños <br/>
+                en castillos de cristal. <br/><br/>
+                Te encontrare una mañana, <br/>
+                dentro de mi habitación <br/>
+                y prepararas la cama para dos.
+            </p>
+        </section>
+        <section id="definitions-list">
+            <h2>Definiciones</h2>
+            <dl>
+                <dt id="uri-definition">URI</dt>
+                <dd>Explicación de URI</dd>
+                <dt id="url-definition">URL</dt>
+                <dd>Explicación de URL</dd>
+                <dt id="html-definition">HTML</dt>
+                <dd>Explicación de HTML</dd>
+                <dt id="xhtml-definition">XHTML</dt>
+                <dd>Explicación de XHTML</dd>
+                <dt id="css-definition">CSS</dt>
+                <dd>Explicación de CSS</dd>
+            </dl>
+        </section>
     </section>
-    <section id="definitions-list">
-        <h2>Definiciones</h2>
-        <dl>
-            <dt id="uri-definition">URI</dt>
-            <dd>Explicación de URI</dd>
-            <dt id="url-definition">URL</dt>
-            <dd>Explicación de URL</dd>
-            <dt id="html-definition">HTML</dt>
-            <dd>Explicación de HTML</dd>
-            <dt id="xhtml-definition">XHTML</dt>
-            <dd>Explicación de XHTML</dd>
-            <dt id="css-definition">CSS</dt>
-            <dd>Explicación de CSS</dd>
-        </dl>
-    </section>
-</section>
-<section id="footer">
-    <h4>Gracias Spock por haberme pasado tu TP 1</h4>
-</section>
+    <footer class="with-border with-padding">
+        <h4>Gracias Spock por haberme pasado tu TP 1</h4>
+    </footer>
+</div>
 </body>
 </html>
