--- a/pages/users.html
+++ b/pages/users.html
@@ -2,14 +2,15 @@
 <html>
 <head>
     <title>Usuarios</title>
+    <link rel="stylesheet" href="/dpoi/css/users.css"/>
 </head>
 <body>
-<div id="header">
+<header>
     <meta charset="UTF-8"/>
     <h1>Usuarios</h1>
-</div>
-<div id="body-container">
-    <div id="table-container">
+</header>
+<section>
+    <div id="table-container" class="centered-container">
         <table>
             <thead>
             <tr>
@@ -17,9 +18,9 @@
                 <th rowspan="2">Apellido</th>
                 <th rowspan="2">Email</th>
                 <th rowspan="2">Teléfono</th>
-                <th colspan="3">Acciones</th>
+                <th colspan="3" class="hide-by-size">Acciones</th>
             </tr>
-            <tr>
+            <tr class="hide-by-size">
                 <th>Ver</th>
                 <th>Editar</th>
                 <th>Eliminar</th>
@@ -31,18 +32,30 @@
                 <td>Colunga</td>
                 <td>pedro@gmail.com</td>
                 <td>1593932323</td>
-                <td><img src="/dpoi/img/calendar.gif" alt="calendario"/></td>
-                <td><img src="/dpoi/img/edit.jpg" alt="edición"/></td>
-                <td><img src="/dpoi/img/delete.jpg" alt="borrar"/></td>
+                <td class="hide-by-size">
+                    <img class="icon" src="/dpoi/img/calendar.gif" alt="calendario"/>
+                </td>
+                <td class="hide-by-size">
+                    <img class="icon" src="/dpoi/img/edit.jpg" alt="edición"/>
+                </td>
+                <td class="hide-by-size">
+                    <img class="icon" src="/dpoi/img/delete.jpg" alt="borrar"/>
+                </td>
             </tr>
             <tr>
                 <td>Eduardo</td>
                 <td>Cominguez</td>
                 <td>spock@gmail.com</td>
                 <td>1593232323</td>
-                <td><img src="/dpoi/img/calendar.gif" alt="calendario"/></td>
-                <td><img src="/dpoi/img/edit.jpg" alt="edición"/></td>
-                <td><img src="/dpoi/img/delete.jpg" alt="borrar"/></td>
+                <td class="hide-by-size">
+                    <img class="icon" src="/dpoi/img/calendar.gif" alt="calendario"/>
+                </td>
+                <td class="hide-by-size">
+                    <img class="icon" src="/dpoi/img/edit.jpg" alt="edición"/>
+                </td>
+                <td class="hide-by-size">
+                    <img class="icon" src="/dpoi/img/delete.jpg" alt="borrar"/>
+                </td>
             </tr>
             </tbody>
         </table>
@@ -52,41 +65,53 @@
         <form action="">
             <div id="user-section">
                 <h3>Usuario</h3>
-                <div id="user-inputs">
-                    <label for="name">Nombre</label>
-                    <input type="text" id="name"/>
-                    <label for="last-name">Apellido</label>
-                    <input type="text" id="last-name"/>
-                    <label for="email">Email</label>
-                    <input type="text" id="email"/>
-                    <label for="phone">Teléfono</label>
-                    <input type="text" id="phone"/>
+                <div id="user-inputs" class="space-around-container">
+                    <div>
+                        <label for="name">Nombre</label>
+                        <input type="text" id="name"/>
+                    </div>
+                    <div>
+                        <label for="last-name">Apellido</label>
+                        <input type="text" id="last-name"/>
+                    </div>
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="text" id="email"/>
+                    </div>
+                    <div>
+                        <label for="phone">Teléfono</label>
+                        <input type="text" id="phone"/>
+                    </div>
                 </div>
             </div>
             <div id="address-section">
                 <div>
                     <h3>Dirección</h3>
-                    <div id="address-inputs">
-                        <label for="street">Calle</label>
-                        <input type="text" id="street"/>
-                        <label for="state">Provincia:</label>
-                        <select id="state">
-                            <option value="capitalfederal">Capital Federal</option>
-                            <option value="buenosaires">Buenos Aires</option>
-                            <option value="formosa">Formosa</option>
-                        </select>
+                    <div id="address-inputs" class="space-around-container">
+                        <div>
+                            <label for="street">Calle</label>
+                            <input type="text" id="street"/>
+                        </div>
+                        <div>
+                            <label for="state">Provincia</label>
+                            <select id="state">
+                                <option value="capitalfederal">Capital Federal</option>
+                                <option value="buenosaires">Buenos Aires</option>
+                                <option value="formosa">Formosa</option>
+                            </select>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div id="form-actions">
+            <div id="form-actions" class="form-footer">
                 <button type="button" id="send">Enviar</button>
                 <button type="button" id="cancel">Cancelar</button>
             </div>
         </form>
     </div>
-</div>
-<div id="footer">
+</section>
+<footer>
     <h4>Gracias Spock por haberme pasado tu TP 1</h4>
-</div>
+</footer>
 </body>
 </html>
